# crocoddyl_msgs

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  package.xml  solver_statistics_stamp_rule.bmr
.github/workflows/: industrial_ci_action.yml  ros-ci.yml  ros_ci.yml
include/crocoddyl_msgs/: conversions.h  inertial_parameters_publisher.h  inertial_parameters_subscriber.h  solver_statistics_publisher.h  solver_statistics_subscriber.h  solver_trajectory_publisher.h  solver_trajectory_subscriber.h  whole_body_state.h  whole_body_state_publisher.h  whole_body_state_subscriber.h  whole_body_trajectory_publisher.h  whole_body_trajectory_subscriber.h
msg/: Control.msg  FeedbackGain.msg  InertialParameters.msg  MultibodyInertialParameters.msg  SolverStatistics.msg  SolverTrajectory.msg  State.msg  TimeInterval.msg
src/: crocoddyl_ros.cpp  solver_statistics_publisher.cpp  solver_statistics_subscriber.cpp  solver_trajectory_publisher.cpp  solver_trajectory_subscriber.cpp
unittest/: CMakeLists.txt  crocoddyl_msgs.test  test_inertial_parameters.py  test_solver_statistics.py  test_solver_trajectory.py  test_whole_body_state.py  test_whole_body_trajectory.py
