<?xml version="1.0"?>
<package format="3">
  <name>crocoddyl_msgs</name>
  <version>0.0.1</version>
  <description>
    Message structures needed to interact with Crocoddyl solvers, inputs and outputs
  </description>

  <maintainer email="c.mastalli@hw.ac.uk">Carlos Mastalli</maintainer>
  <author email="c.mastalli@hw.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>whole_body_state_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>pybind11_catkin</depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
</package>